[package]
name = "keepwakers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mouse-rs = "0.4.1"
clap = "3.1.17"
rand = "0.8.5"
tokio = {version ="1.18.1", features=["full"]}
rdev = { version = "0.5.1" }